# FVM_code

1_1D_heat_conduction/: main.m
FVM_node_centered_cuda/: CMakeLists.txt
FVM_node_centered_cuda/GPU/: CMakeLists.txt  GPU_mat.cu
FVM_node_centered_cuda/include/: FVM.h  If_a_2D_point_lies_on_a_line_seg.h  Normal_.h  Using_UMFPACK.h
FVM_node_centered_cuda/src/: main.cu
FVM_node_centered_version1/: CMakeLists.txt
FVM_node_centered_version1/include/: FVM.h  mesh.h
FVM_node_centered_version1/src/: main.cpp
barycenter_control_volume_note/: FVM.aux  FVM.tex
barycenter_control_volume_note/figures/first_BC/: main.m
barycenter_control_volume_note/figures/self/: main.m
node_control_volume_note/: FVM.aux  FVM.tex
node_control_volume_note/figures/: Untitled 1.odg
node_control_volume_note/figures/A_mesh_containing_thin_triangle/: main.m
